Dodano część warstw wektorowych

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.js"></script>
     <script src="data/drogi2.js"></script>
     <script src="data/wyzyna.js"></script>
+    <script src="data/cafe.js"></script>
+    <script src="data/castle.js"></script>
+    <script src="data/archeo.js"></script>
+    <script src="data/attraction.js"></script>
+    <script src="data/memorial.js"></script>
+    <script src="data/museum.js"></script>
+    <script src="data/restaurant.js"></script>
+    <script src="data/shop.js"></script>
 
     <!-- Leaflet.Draw i Leaflet.Snap -->
     <link rel="stylesheet" href="src/leaflet.draw.css">
