New files - with smaller amount of attributes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <script src="data/museum.js"></script>
     <script src="data/restaurant.js"></script>
     <script src="data/shop.js"></script>
+    <script src="data/toilet.js"></script>
+    <script src="data/tourist_info.js"></script>
+    <script src="data/tower.js"></script>
 
     <!-- Leaflet.Draw i Leaflet.Snap -->
     <link rel="stylesheet" href="src/leaflet.draw.css">
