--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="src/jquery-3.6.0.min.js"></script>
     <script src="src/leaflet-providers.js"></script>
     <script src="src/leaflet.ajax.min.js"></script>
+    <script src="src/leaflet-mapkey/L.Icon.Mapkey.js"></script>
+    <link rel="stylesheet" href="src/leaflet-mapkey/MapkeyIcons.css"/>
 
     <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet-vector@3/dist/esri-leaflet-vector.js"></script>
@@ -51,11 +53,16 @@
         </div>
         <div class="menu">
             <ul class="list">
-                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">Mapa</a></li>
-                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">Z trasy</a></li>
-                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">Ciekawostki</a></li>
-                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">O nas</a></li>
-                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">Moje konto</a></li>
+                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">Mapa</a>
+                </li>
+                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">Z
+                        trasy</a></li>
+                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home"
+                        asp-action="Index">Ciekawostki</a></li>
+                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">O
+                        nas</a></li>
+                <li class="list__el"><a class="list__link" asp-area="" asp-controller="Home" asp-action="Index">Moje
+                        konto</a></li>
             </ul>
         </div>
         <div class="login">
@@ -72,15 +79,16 @@
                 <li class="tab__li tab__active"><a class="tab__header" href="#tab1">Szukaj</a></li>
                 <li class="tab__li"><a class="tab__header" href="#tab2">Dodaj</a></li>
                 <li class="tab__li"><a class="tab__header" href="#tab3">Trasa</a></li>
-            </ul>            
+            </ul>
             <div class="tab__panel tab__active" id="tab1">
                 <div class="search">
                     <h3 class="panel__header">Szukaj trasy</h3>
                     <form>
                         <label class="search__header">Długość: </label></br>
                         <div class="search__options">
-                            <button class="search__button" id="len" value="length-1"><30km</button>
-                            <button class="search__button" id="len" value="length-2">31-50 km</button>
+                            <button class="search__button" id="len" value="length-1">
+                                <30km</button> <button class="search__button" id="len" value="length-2">31-50 km
+                            </button>
                             <button class="search__button" id="len" value="length-3">51-80 km</button>
                             <button class="search__button" id="len" value="length-4">81-100 km</button>
                             <button class="search__button" id="len" value="length-5">>100 km</button></br>
@@ -101,8 +109,8 @@
                             <img class="search__img" src="img/compass.png">
                             <button class="search__button search__button--submit">Szukaj</button>
                         </div>
-                    </form>      
-                </div>               
+                    </form>
+                </div>
             </div>
             <div class="tab__panel" id="tab2">
                 <div class="search">
@@ -125,10 +133,10 @@
                     </div>
 
                 </div>
-            </div>           
-    </div>
-    <script type="text/javascript" src="map.js"></script>
-    <script type="text/javascript" src="panel.js"></script>
+            </div>
+        </div>
+        <script type="text/javascript" src="map.js"></script>
+        <script type="text/javascript" src="panel.js"></script>
 </body>
 
 </html>
