Poprawki ortograficzne i w popupach

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="src/leaflet.ajax.min.js"></script>
     <script src="src/leaflet-mapkey/L.Icon.Mapkey.js"></script>
     <link rel="stylesheet" href="src/leaflet-mapkey/MapkeyIcons.css"/>
+    <script src="src/speach-bubble/L.SpeechBubble.js"></script>
+    <link rel="stylesheet" href="src/speach-bubble/SpeechBubble.css"/> 
+
 
     <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet-vector@3/dist/esri-leaflet-vector.js"></script>
