Wprowadzone rysowanie, ale nie snapuje się do dróg

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="src/leaflet-mapkey/MapkeyIcons.css"/>
     <script src="src/speach-bubble/L.SpeechBubble.js"></script>
     <link rel="stylesheet" href="src/speach-bubble/SpeechBubble.css"/> 
+    <link rel="stylesheet" href="src/geoman/leaflet-geoman.css"/> 
+    <script src="src/geoman/leaflet-geoman.min.js"></script>
+
 
 
     <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
