Dodano nową maskę

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="data/toilet.js"></script>
     <script src="data/tourist_info.js"></script>
     <script src="data/tower.js"></script>
+    <script src="data/maska.js"></script>
 
     <!-- Leaflet.Draw i Leaflet.Snap -->
     <link rel="stylesheet" href="src/leaflet.draw.css">
