Po testach wtyczek

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="src/geoman/leaflet-geoman.css" />
     <script src="src/geoman/leaflet-geoman.min.js"></script>
 
+    <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
+    <script src="https://unpkg.com/esri-leaflet-vector@3/dist/esri-leaflet-vector.js"></script>
+
 
 
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
@@ -125,7 +128,7 @@
                     <h3 class="panel__header">Dodaj trasę</h3>
                     <div class="draw__start">
                         <div>
-                            <p>Po kliknięciu przycisku Rysuj, po lewej stronie pojawi się przybornik do rysowania.
+                            <p>Po kliknięciu przycisku rysowania, po lewej stronie pojawi się przybornik.
                                 Po zakończeniu trasy, naciśnij "Finish". Nazwa trasy jest obowiązkowa.
                             </p>
                         </div>
