Aaaa coś działa działa działa!

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
     <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet-vector@3/dist/esri-leaflet-vector.js"></script>
+    <script src="src/vector-tile-layer/VectorTileLayer.js"></script>
+
+    <!--  Allora, non funzionano
+    <script src="src/vector-tile-layer/FeatureLayer.js"></script>
+    <script src="src/vector-tile-layer/FeatureTile.js"></script>
+    <script src="src/vector-tile-layer/fetch.js"></script>
+    -->
 
 
 
