--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet-vector@3/dist/esri-leaflet-vector.js"></script>
+    <script src="src/geojson-polyline.min.js"></script>
 
     <!--  Allora, non funzionano
     <script src="src/vector-tile-layer/VectorTileLayer.js"></script>
